--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -22,17 +22,29 @@
         <source>message.empty_list</source>
         <target>Lista jest pusta.</target>
       </trans-unit>
-      <trans-unit id="message.record_not_found">
-        <source>message.record_not_found</source>
+      <trans-unit id="message.empty_commentlist">
+        <source>message.empty_commentlist</source>
+        <target>Brak komentarzy.</target>
+      </trans-unit>
+      <trans-unit id="message.post_not_found">
+        <source>message.post_not_found</source>
         <target>Nie znaleziono posta.</target>
       </trans-unit>
-      <trans-unit id="title.record_list">
-        <source>title.record_list</source>
-        <target>Lista postów</target>
+      <trans-unit id="message.edited_successfully">
+        <source>message.edited_successfully</source>
+        <target>Pomyślnie edytowano.</target>
       </trans-unit>
-      <trans-unit id="title.record_view">
-        <source>title.record_view</source>
-        <target>Record view #%id%</target>
+      <trans-unit id="message.category_contains_posts">
+        <source>message.category_contains_posts</source>
+        <target>Nie można edytować- kategoria zawiera posty.</target>
+      </trans-unit>
+      <trans-unit id="message.created_successfully">
+        <source>message.created_successfully</source>
+        <target>Utworzono pomyślnie.</target>
+      </trans-unit>
+      <trans-unit id="message.deleted_successfully">
+        <source>message.deleted_successfully</source>
+        <target>Pomyślnie usunięto.</target>
       </trans-unit>
 
       <trans-unit id="title.post_details">
@@ -45,15 +57,35 @@
       </trans-unit>
       <trans-unit id="label.created_at">
            <source>label.created_at</source>
-           <target>Utworzony</target>
+           <target>Utworzono</target>
       </trans-unit>
       <trans-unit id="label.updated_at">
            <source>label.updated_at</source>
-           <target>Zmodyfikowany</target>
+           <target>Zmodyfikowano</target>
       </trans-unit>
       <trans-unit id="label.category">
            <source>label.category</source>
            <target>Kategoria</target>
+      </trans-unit>
+      <trans-unit id="label.nick">
+           <source>label.nick</source>
+           <target>Nick</target>
+      </trans-unit>
+      <trans-unit id="label.email">
+           <source>label.email</source>
+           <target>Email</target>
+      </trans-unit>
+      <trans-unit id="label.new_password">
+           <source>label.new_password</source>
+           <target>Nowe hasło</target>
+      </trans-unit>
+      <trans-unit id="label.password.repeat">
+           <source>label.password.repeat</source>
+           <target>Powtórz hasło</target>
+      </trans-unit>
+      <trans-unit id="label.none">
+           <source>label.none</source>
+           <target>Wybierz</target>
       </trans-unit>
       <trans-unit id="action.show">
            <source>action.show</source>
@@ -83,9 +115,25 @@
            <source>action.create_category</source>
            <target>Utwórz kategorię</target>
       </trans-unit>
+      <trans-unit id="title.category_details">
+           <source>title.category_details</source>
+           <target>Szczegóły kategorii</target>
+      </trans-unit>
+      <trans-unit id="title.category_delete">
+           <source>title.category_delete</source>
+           <target>Usuń kategorię</target>
+      </trans-unit>
+      <trans-unit id="message.category_not_found">
+           <source>message.category_not_found</source>
+           <target>Nie znaleziono kategorii</target>
+      </trans-unit>
       <trans-unit id="title.post_edit">
            <source>title.post_edit</source>
            <target>Edytuj post</target>
+      </trans-unit>
+      <trans-unit id="title.post_delete">
+           <source>title.post_delete</source>
+           <target>Usuń post</target>
       </trans-unit>
       <trans-unit id="action.show_post_list">
            <source>action.show_post_list</source>
@@ -107,10 +155,7 @@
            <source>title.post_create</source>
            <target>Utwórz post</target>
       </trans-unit>
-      <trans-unit id="label.none">
-           <source>label.none</source>
-           <target>Brak</target>
-      </trans-unit>
+
       <trans-unit id="action.create_post">
            <source>action.create_post</source>
            <target>Utwórz post</target>
@@ -119,6 +164,67 @@
            <source>message.form_error</source>
            <target>Błędny formularz</target>
       </trans-unit>
+      <trans-unit id="title.comment_list">
+           <source>title.comment_list</source>
+           <target>Komentarze</target>
+      </trans-unit>
+      <trans-unit id="title.comment_create">
+           <source>title.comment_create</source>
+           <target>Dodaj kometarz</target>
+      </trans-unit>
+      <trans-unit id="title.comment_delete">
+           <source>title.comment_delete</source>
+           <target>Usuń kometarz</target>
+      </trans-unit>
+      <trans-unit id="action.comment_create">
+           <source>action.comment_create</source>
+           <target>Dodaj kometarz</target>
+      </trans-unit>
+      <trans-unit id="action.homepage">
+           <source>action.homepage</source>
+           <target>Strona główna</target>
+      </trans-unit>
+      <trans-unit id="action_logout">
+           <source>action_logout</source>
+           <target>Wyloguj się</target>
+      </trans-unit>
+      <trans-unit id="action_change_password">
+           <source>action_change_password</source>
+           <target>Zmień hasło</target>
+      </trans-unit>
+      <trans-unit id="action_change_data">
+           <source>action_change_data</source>
+           <target>Zmień swoje dane</target>
+      </trans-unit>
+      <trans-unit id="action_login">
+           <source>action_login</source>
+           <target>Zaloguj się</target>
+      </trans-unit>
+      <trans-unit id="title.user_edit">
+           <source>title.user_edit</source>
+           <target>Zmień hasło</target>
+      </trans-unit>
+      <trans-unit id="title.userdata_edit">
+           <source>title.userdata_edit</source>
+           <target>Zmień dane</target>
+      </trans-unit>
+      <trans-unit id="title.log_in">
+           <source>title.log_in</source>
+           <target>Zaloguj się!</target>
+      </trans-unit>
+      <trans-unit id="title.sign_in">
+           <source>title.sign_in</source>
+           <target>Proszę się zalogować</target>
+      </trans-unit>
+      <trans-unit id="label.password">
+           <source>label.password</source>
+           <target>Hasło</target>
+      </trans-unit>
+      <trans-unit id="action.sign_in">
+           <source>action.sign_in</source>
+           <target>Zaloguj się</target>
+      </trans-unit>
+
     </body>
   </file>
 </xliff>
