--- a/app/translations/messages.en.xlf
+++ b/app/translations/messages.en.xlf
@@ -184,20 +184,20 @@
            <source>action.homepage</source>
            <target>Homepage</target>
       </trans-unit>
-      <trans-unit id="action_logout">
-           <source>action_logout</source>
+      <trans-unit id="action.logout">
+           <source>action.logout</source>
            <target>Log out</target>
       </trans-unit>
-      <trans-unit id="action_change_password">
-           <source>action_change_password</source>
+      <trans-unit id="action.change_password">
+           <source>action.change_password</source>
            <target>Change password</target>
       </trans-unit>
-      <trans-unit id="action_change_data">
-           <source>action_change_data</source>
+      <trans-unit id="action.change_data">
+           <source>action.change_data</source>
            <target>Change data</target>
       </trans-unit>
-      <trans-unit id="action_login">
-           <source>action_login</source>
+      <trans-unit id="action.login">
+           <source>action.login</source>
            <target>Log in</target>
       </trans-unit>
       <trans-unit id="title.user_edit">
