--- a/app/translations/messages.pl.xlf
+++ b/app/translations/messages.pl.xlf
@@ -184,20 +184,20 @@
            <source>action.homepage</source>
            <target>Strona główna</target>
       </trans-unit>
-      <trans-unit id="action_logout">
-           <source>action_logout</source>
+      <trans-unit id="action.logout">
+           <source>action.logout</source>
            <target>Wyloguj się</target>
       </trans-unit>
-      <trans-unit id="action_change_password">
-           <source>action_change_password</source>
+      <trans-unit id="action.change_password">
+           <source>action.change_password</source>
            <target>Zmień hasło</target>
       </trans-unit>
-      <trans-unit id="action_change_data">
-           <source>action_change_data</source>
+      <trans-unit id="action.change_data">
+           <source>action.change_data</source>
            <target>Zmień swoje dane</target>
       </trans-unit>
-      <trans-unit id="action_login">
-           <source>action_login</source>
+      <trans-unit id="action.login">
+           <source>action.login</source>
            <target>Zaloguj się</target>
       </trans-unit>
       <trans-unit id="title.user_edit">
